k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aldar-middleware
  labels:
    name: aldar-middleware
    environment: development
